--- a/WebBellwether.Web/app/home/header.html
+++ b/WebBellwether.Web/app/home/header.html
@@ -1,4 +1,4 @@
-﻿<header class="main-header zIndex2">    
+﻿<header class="main-header zIndex2">
     <div class="margin10 zIndex2">
         <img src="/appData/images/logo/BigBLogoLightR.png" style="width: 150px; height: 150px; margin-bottom: -20px; margin-top: -10px;" />
     </div>
@@ -57,36 +57,8 @@
                 <div class="app-bar-element">
                     <label style="text-decoration: none; color: darkorange" href="" class="dropdown-toggle"><span class="mif-search mif-ani-pulse"></span>{{translation.Search}}</label>
                     <div class="app-bar-drop-container place-left" data-role="dropdown" data-no-close="true">
-                        <div class="padding20">
-                            <!--<div ng-include src="'/app/search/search.html'"></div>-->
-                            <div data-ng-controller="searchController" style="z-index: 2">
-                                <!--INTEGRATION GAMES-->
-                                <div ng-show="filterDependingOnLocation == 'showGamesFilter'">
-                                    <input type="text" class="form-control myFormColor" style="border: none !important" ng-change="applyIntegrationGamesFilter()" data-ng-model="integrationGamesSearchParams.gameName" placeholder={{translation.GameName}}>
-                                    <div ng-repeat="feature in gameFeatures">
-                                        <h3 style="clear: both; display: inline-block; white-space: nowrap;">{{feature.gameFeatureName}}</h3>
-                                        <select class="form-control myFormColor" style="border: none !important" ng-change="applyIntegrationGamesFilter()" data-ng-model="integrationGamesSearchParams.integrationGameDetailModels[$index]" data-ng-options="gfdm.gameFeatureDetailName for gfdm in feature.gameFeatureDetailModels">
-                                            <!--<option value="">{{translation.PleaseSelectGame}}</option>-->
-                                            <option value="">{{translation[gameFeaturesTemplateName[$index]]}}</option>
-                                        </select>
-                                    </div>
-                                </div>
-                                <!--JOKES-->
-                                <div ng-show="filterDependingOnLocation == 'showJokesFilter'">
-                                    <h1 style="clear: both; display: inline-block; white-space: nowrap;">Kawały</h1>
-                                    <input type="text" class="form-control myFormColor" style="border: none !important" ng-change="applyJokesFilter()" data-ng-model="jokesSearchParams.jokeContent"/>
-                                    <select class="form-control myFormColor" style="border: none !important" ng-change="applyJokesFilter()" data-ng-model="jokesSearchParams.jokeCategoryId" data-ng-options="jk.id as jk.jokeCategoryName for jk in jokeCategories">
-                                        <option value="">{{translation.SelectCategoryForJoke}}</option>
-                                    </select>
-                                </div>
-                                <div ng-show="filterDependingOnLocation == ''">
-                                    <div class="margin100">
-                                        Siema test
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
-                        <ul class="bg-bubblesFooter" style="margin: 1px">
+                        <div ng-include src="'/app/search/search.html'"></div>
+                        <ul class="bg-bubblesFooter">
                             <li></li>
                             <li></li>
                             <li></li>
@@ -98,7 +70,6 @@
                             <li></li>
                             <li></li>
                         </ul>
-
                     </div>
                 </div>
                 <!--AUTHENTICATION-->
@@ -111,8 +82,8 @@
                 <div data-ng-hide="authentication.isAuth" class="app-bar-element place-right">
                     <label style="text-decoration: none;color: chartreuse" class="dropdown-toggle"><span class="mif-enter mif-ani-shuttle"></span>{{translation.Login}}</label>
                     <div class="app-bar-drop-container place-right" data-role="dropdown" data-no-close="true">
-                        <div class="margin20 zIndex2" ng-include src="'/app/authorizations/authentication.html'"></div>
-                        <ul class="bg-bubblesFooter" style="margin: 1px">
+                        <div ng-include src="'/app/authorizations/authentication.html'"></div>
+                        <ul class="bg-bubblesFooter">
                             <li></li>
                             <li></li>
                             <li></li>
@@ -126,7 +97,6 @@
                         </ul>
                     </div>
                 </div>
-
                 <div class="app-bar-pullbutton automatic" style="display: none;"></div><div class="clearfix" style="width: 0;"></div><nav class="app-bar-pullmenu hidden flexstyle-app-bar-menu" style="display: none;"><ul class="app-bar-pullmenubar app-bar-menu hidden" style="display: none;"></ul></nav>
             </div>
         </div>
