--- a/WebBellwether.Web/app/integrationGames/integrationGames.html
+++ b/WebBellwether.Web/app/integrationGames/integrationGames.html
@@ -16,7 +16,7 @@
         </div>
     </div>
     <!--PAGER CONTROL-->
-    <div class="row">
+    <div class="row" ng-show="(integrationGames |filter:search).length / entryLimit > 1">
         <uib-pagination ng-change="pageChanged()" style="display: inline-block; position: relative; top: 71px;z-index: 3" direction-links="false" max-size="maxSize" ng-model="currentPage" total-items="(integrationGames |filter:search).length" items-per-page="entryLimit" num-pages="noOfPages" rotate="false"></uib-pagination>        
             <uib-pager ng-change="pageChanged()" style="position: relative;" total-items="(integrationGames |filter:search).length" max-size="maxSize" ng-model="currentPage" items-per-page="entryLimit" num-pages="noOfPages" ></uib-pager>
     </div>
