--- a/WebBellwether.Web/app/home/header.html
+++ b/WebBellwether.Web/app/home/header.html
@@ -48,6 +48,9 @@
                                 <a href="#/managementLanguages">{{translation.ManagementLanguages}}</a>
                             </li>
                             <li>
+                                <a href="#/managementVersions">{{translation.ManagementVersions}}</a>
+                            </li>
+                            <li>
                                 <a href="#/tokens">{{translation.ManagementAccounts}}</a>
                             </li>
                         </ul>
