--- a/WebBellwether.Web/index.html
+++ b/WebBellwether.Web/index.html
@@ -86,7 +86,7 @@
     <script src="app/translations/translateService.js"></script>
     <script src="app/jokes/jokesService.js"></script>
     <script src="app/languages/languagesService.js"></script>
-
+    <script src="app/versions/versionsService.js"></script>
     <!-- Load controllers -->
     <script src="app/home/indexController.js"></script>
     <script src="app/home/homeController.js"></script>
@@ -108,6 +108,7 @@
     <script src="app/jokes/managementJokesController.js"></script>
     <script src="app/languages/managementLanguagesController.js"></script>
     <script src="app/search/searchController.js"></script>
+    <script src="app/versions/managementVersionsController.js"></script>
 
     <!-- Load custom filters -->
     <script src="app/filters/customFilters.js"></script>
